--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="./recipes/chicken_alfredo.html"">Chicken Alfredo</a></li>
+        </ul>
     </body>
 </html>
