--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/chicken_alfredo.html"">Chicken Alfredo</a></li>
+            <li><a href="./recipes/alfredo_sauce.html">Alfredo Sauce</a></li>
         </ul>
     </body>
 </html>
