--- a/recipes/chicken_alfredo.html
+++ b/recipes/chicken_alfredo.html
@@ -7,5 +7,36 @@
 </head>
 <body>
     <h1>Chicken Alfredo</h1>
+    <img alt="Pasta and Chicken coated in a creamy white sauce" src="http://s3.amazonaws.com/photography.prod.demandstudios.com/8d467955-5960-4281-8bf9-96310bdb403e.jpg">
+    <ul>
+        <li>1 chicken breast</li>
+        <li>&lt;1oz of olive oil (or any prefered greaser)</li>
+        <li>1oz of lemon juice(optional)</li>
+        <li>12oz of Alfredo Sauce(either a jar or the recipe found<a href="./alfredo_sauce.html">here</a>)</li>
+        <li>16oz [1 Box of] Fettuccine</li>
+    </ul>
+    <h3>Directions</h3>
+    <ol>
+        <li>Bring the stovetop to med to high heat and bring a pot of water to a rolling boil</li>
+        <li>Bring out the chicken breast and dice it into 1/4" cubes.</li>
+        <li>Bring another pan to medium heat and drizzle your oil onto it. Put your diced chicken into the pan. Sprinkle your salt/pepper to taste.
+        </li>
+        <li>
+            Cook for 5-6 minutes, or until the edges are turning golden brown. If your wanting to include lemon juice,
+            I would add it before the chicken is browned, but isn't pink, about 2-3 minutes in.
+        </li>
+        <li>
+            Once the pasta is al dante, strain it out with a Colander. Put it back into the pot.
+        </li>
+        <li>
+            If you handmade the sauce, toss it into the pot at this time, if not, pour it into the pan with the chicken to heat up, about 2-3 minutes.
+        </li>
+        <li>
+            Add contents of the pan into the pot and toss it together.
+        </li>
+        <li>
+            Plate and serve!
+        </li>
+    </ol>
 </body>
 </html>
