--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
             <li><a href="./recipes/chicken_alfredo.html"">Chicken Alfredo</a></li>
             <li><a href="./recipes/alfredo_sauce.html">Alfredo Sauce</a></li>
         </ul>
+        <ul>
+            <li><a href="./recipes/ez_drop_buscuits.html">EZ Drop Biscuits</a></li>
+        </ul>
     </body>
 </html>
