fix(docs):Revised Description of EZ Drop Biscuits

--- a/recipes/ez_drop_biscuits.html
+++ b/recipes/ez_drop_biscuits.html
@@ -10,7 +10,7 @@
     <h5>Provided by <a href="https://www.allrecipes.com/recipe/21135/e-z-drop-biscuits/">Angela</a></h5>
     <img src="../resources/ez_drop_biscuits.jpg" alt="Beautiful batch of crumbly buscuits with edges speckled with golden rays">
     <h3>Description</h3>
-    <p>A set of biscuits with a bit of cowboy, no kneading or layering, just mix, drop, and enjoy.</p>
+    <p>A set of biscuits with a bit of cowboy flare; no kneading or layering required. Just mix, drop, and enjoy.</p>
     <h3>Ingredients</h3>
     <ul>
         <li>2 cups all-purpose flour</li>
