fix:Add description to chicken alfredo and sauce
Add description to 'chicken_alfredo.html'
Add description to 'alfredo_sauce.html'
Add missing optional tag to 'chicken_alfredo.html' ingredient 'lemon juice'

--- a/recipes/chicken_alfredo.html
+++ b/recipes/chicken_alfredo.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Chicken Alfredo</h1>
     <img alt="Pasta and Chicken coated in a creamy white sauce" src="http://s3.amazonaws.com/photography.prod.demandstudios.com/8d467955-5960-4281-8bf9-96310bdb403e.jpg">
+    <h3>Description</h3>
+    <p>An italian dish made with chicken, pasta and a creamy sauce that ties them together into a delectable dinner</p>
+    <h3>Ingredients</h3>
     <ul>
         <li>1 chicken breast</li>
         <li>&lt;1oz of olive oil (or any prefered greaser)</li>
@@ -23,7 +26,7 @@
         </li>
         <li>
             Cook for 5-6 minutes, or until the edges are turning golden brown. If your wanting to include lemon juice,
-            I would add it before the chicken is browned, but isn't pink, about 2-3 minutes in.
+            Add it before the chicken is browning, but not while pink, about 2-3 minutes in.
         </li>
         <li>
             Once the pasta is al dante, strain it out with a Colander. Put it back into the pot.
@@ -32,7 +35,7 @@
             If you handmade the sauce, toss it into the pot at this time, if not, pour it into the pan with the chicken to heat up, about 2-3 minutes.
         </li>
         <li>
-            Add contents of the pan into the pot and toss it together.
+            Add contents of the chicken pan into the pot and toss it together.
         </li>
         <li>
             Plate and serve!
