--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>
             Recipes for Odin
         </title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
