--- a/recipes/chicken_alfredo.html
+++ b/recipes/chicken_alfredo.html
@@ -3,43 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Recipes for Odin | Chicken Alfredo</title>
 </head>
 <body>
+    <section class="title">
     <h1>Chicken Alfredo</h1>
     <img alt="Pasta and Chicken coated in a creamy white sauce" src="http://s3.amazonaws.com/photography.prod.demandstudios.com/8d467955-5960-4281-8bf9-96310bdb403e.jpg">
-    <h3>Description</h3>
-    <p>An italian dish made with chicken, pasta and a creamy sauce that ties them together into a delectable dinner</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1 chicken breast</li>
-        <li>&lt;1oz of olive oil (or any prefered greaser)</li>
-        <li>1oz of lemon juice(optional)</li>
-        <li>12oz of Alfredo Sauce(either a jar or the recipe found <a href="./alfredo_sauce.html">here</a>)</li>
-        <li>16oz [1 Box of] Fettuccine</li>
-    </ul>
-    <h3>Directions</h3>
-    <ol>
-        <li>Bring the stovetop to med to high heat and bring a pot of water to a rolling boil</li>
-        <li>Bring out the chicken breast and dice it into 1/4" cubes.</li>
-        <li>Bring another pan to medium heat and drizzle your oil onto it. Put your diced chicken into the pan. Sprinkle your salt/pepper to taste.
-        </li>
-        <li>
-            Cook for 5-6 minutes, or until the edges are turning golden brown. If your wanting to include lemon juice,
-            Add it before the chicken is browning, but not while pink, about 2-3 minutes in.
-        </li>
-        <li>
-            Once the pasta is al dante, strain it out with a Colander. Put it back into the pot.
-        </li>
-        <li>
-            If you handmade the sauce, toss it into the pot at this time, if not, pour it into the pan with the chicken to heat up, about 2-3 minutes.
-        </li>
-        <li>
-            Add contents of the chicken pan into the pot and toss it together.
-        </li>
-        <li>
-            Plate and serve!
-        </li>
-    </ol>
+    </section>
+    <section class="description">
+        <h3 class="header">Description</h3>
+        <p class="contents">An italian dish made with chicken, pasta and a creamy sauce that ties them together into a delectable dinner</p>
+    </section>
+    <section class="ingredients">
+        <h3 class="header">Ingredients</h3>
+        <ul class="contents">
+            <li>1 chicken breast</li>
+            <li>&lt;1oz of olive oil (or any prefered greaser)</li>
+            <li>1oz of lemon juice(optional)</li>
+            <li>12oz of Alfredo Sauce(either a jar or the recipe found <a href="./alfredo_sauce.html">here</a>)</li>
+            <li>16oz [1 Box of] Fettuccine</li>
+        </ul>
+    </section>
+    <section class="directions">
+        <h3 class="header">Directions</h3>
+        <ol class="contents">
+            <li>Bring the stovetop to med to high heat and bring a pot of water to a rolling boil</li>
+            <li>Bring out the chicken breast and dice it into 1/4" cubes.</li>
+            <li>Bring another pan to medium heat and drizzle your oil onto it. Put your diced chicken into the pan. Sprinkle your salt/pepper to taste.
+            </li>
+            <li>
+                Cook for 5-6 minutes, or until the edges are turning golden brown. If your wanting to include lemon juice,
+                Add it before the chicken is browning, but not while pink, about 2-3 minutes in.
+            </li>
+            <li>
+                Once the pasta is al dante, strain it out with a Colander. Put it back into the pot.
+            </li>
+            <li>
+                If you handmade the sauce, toss it into the pot at this time, if not, pour it into the pan with the chicken to heat up, about 2-3 minutes.
+            </li>
+            <li>
+                Add contents of the chicken pan into the pot and toss it together.
+            </li>
+            <li>
+                Plate and serve!
+            </li>
+        </ol>
+    </section>
 </body>
 </html>
