--- a/recipes/ez_drop_biscuits.html
+++ b/recipes/ez_drop_biscuits.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes for Odin | E-Z Drop Biscuits</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>E-Z Drop Biscuits</h1>
