--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="title">Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/chicken_alfredo.html"">Chicken Alfredo</a></li>
             <li><a href="./recipes/alfredo_sauce.html">Alfredo Sauce</a></li>
