--- a/recipes/ez_drop_biscuits.html
+++ b/recipes/ez_drop_biscuits.html
@@ -7,28 +7,36 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>E-Z Drop Biscuits</h1>
-    <h5>Provided by <a href="https://www.allrecipes.com/recipe/21135/e-z-drop-biscuits/">Angela</a></h5>
-    <img src="../resources/ez_drop_biscuits.jpg" alt="Beautiful batch of crumbly buscuits with edges speckled with golden rays">
-    <h3>Description</h3>
-    <p>A set of biscuits with a bit of cowboy flare; no kneading or layering required. Just mix, drop, and enjoy.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>2 cups all-purpose flour</li>
-        <li>1 tablespoon baking powder</li>
-        <li>2 teaspoons white sugar</li>
-        <li>¼ teaspoon salt</li>
-        <li>½ cup melted butter</li>
-        <li>1 cup milk</li>
-    </ul>
-    <h3>Directions</h3>
-    <ol>
-        <li>Preheat oven to 450°F (230°C)</li>
-        <li>In a large bowl, combine flour, baking powder, sugar, and salt</li>
-        <li>Stir in butter and milk until batter is moistened (and no more)</li>
-        <li>Drop batter onto a lightly greased pan</li>
-        <li>Bake in preheated oven until golden on the edges. About 10-12 min</li>
-        <li>Let cool, then serve!</li>
-    </ol>
+    <section class="title">
+        <h1>E-Z Drop Biscuits</h1>
+        <h5>Provided by <a href="https://www.allrecipes.com/recipe/21135/e-z-drop-biscuits/">Angela</a></h5>
+        <img src="../resources/ez_drop_biscuits.jpg" alt="Beautiful batch of crumbly buscuits with edges speckled with golden rays">
+    </section>
+    <section class="description">
+        <h3 class="header">Description</h3>
+        <p class="content">A set of biscuits with a bit of cowboy flare; no kneading or layering required. Just mix, drop, and enjoy.</p>
+    </section>
+    <section class="ingredients">
+        <h3 class="header">Ingredients</h3>
+        <ul class="content">
+            <li>2 cups all-purpose flour</li>
+            <li>1 tablespoon baking powder</li>
+            <li>2 teaspoons white sugar</li>
+            <li>¼ teaspoon salt</li>
+            <li>½ cup melted butter</li>
+            <li>1 cup milk</li>
+        </ul>
+    </section>
+    <section class="directions">
+        <h3 class="header">Directions</h3>
+        <ol class="content">
+            <li>Preheat oven to 450°F (230°C)</li>
+            <li>In a large bowl, combine flour, baking powder, sugar, and salt</li>
+            <li>Stir in butter and milk until batter is moistened (and no more)</li>
+            <li>Drop batter onto a lightly greased pan</li>
+            <li>Bake in preheated oven until golden on the edges. About 10-12 min</li>
+            <li>Let cool, then serve!</li>
+        </ol>
+    </section>
 </body>
 </html>
