fix:Fix typo of 'content' for 'contents' styling

--- a/recipes/ez_drop_biscuits.html
+++ b/recipes/ez_drop_biscuits.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes for Odin | E-Z Drop Biscuits</title>
     <link rel="stylesheet" href="../style.css">
+    <title>Recipes for Odin | E-Z Drop Biscuits</title>
 </head>
 <body>
     <section class="title">
@@ -14,11 +14,11 @@
     </section>
     <section class="description">
         <h3 class="header">Description</h3>
-        <p class="content">A set of biscuits with a bit of cowboy flare; no kneading or layering required. Just mix, drop, and enjoy.</p>
+        <p class="contents">A set of biscuits with a bit of cowboy flare; no kneading or layering required. Just mix, drop, and enjoy.</p>
     </section>
     <section class="ingredients">
         <h3 class="header">Ingredients</h3>
-        <ul class="content">
+        <ul class="contents">
             <li>2 cups all-purpose flour</li>
             <li>1 tablespoon baking powder</li>
             <li>2 teaspoons white sugar</li>
@@ -29,7 +29,7 @@
     </section>
     <section class="directions">
         <h3 class="header">Directions</h3>
-        <ol class="content">
+        <ol class="contents">
             <li>Preheat oven to 450°F (230°C)</li>
             <li>In a large bowl, combine flour, baking powder, sugar, and salt</li>
             <li>Stir in butter and milk until batter is moistened (and no more)</li>
