feat:Add styling to index via classes and css
Split all recipes into categorical selection lists
Add 'selection' class to all selection lists in 'index.html'
Add labels for all selections
Add 'selection' class implementation in 'style.css'

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
     </head>
     <body>
         <h1 class="title">Odin Recipes</h1>
-        <ul>
+        <h3>Dishes</h3>
+        <ul class="selection">
             <li><a href="./recipes/chicken_alfredo.html"">Chicken Alfredo</a></li>
+        </ul>
+        <h3>Sauces</h3>
+        <ul class="selection">
             <li><a href="./recipes/alfredo_sauce.html">Alfredo Sauce</a></li>
         </ul>
-        <ul>
+        <h3>Baked Goods</h3>
+        <ul class="selection">
             <li><a href="./recipes/ez_drop_biscuits.html">EZ Drop Biscuits</a></li>
         </ul>
     </body>
